# machi_algo_repo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
burnikel_zigler_division/: function.cpp  function.h
headers/: burnikel_zigler.h  burnikel_zigler_big_osn.h  math_func_big_osn.h  util_function.h
impl/: math_func.cpp  math_func.h  util_function.cpp  util_function.h
source/: add.cpp  add_big_osn.cpp  burnikel_zigler.cpp  burnikel_zigler_big_osn.cpp  compare.cpp  compare_common.cpp  difference.cpp  difference_big_osn.cpp  division.cpp  division_big_osn.cpp  multiplication.cpp  multiplication_big_osn.cpp  util_function.cpp
tests/headers/: burnikel_zigler_test.h
tests/sources/: burnikel_zigler_test.cpp
